--- a/index/index.html
+++ b/index/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <!-- header section start -->
@@ -31,7 +31,7 @@
              <a href="form.html" class="btn">try for free</a>
         </div>
         <div class="image">
-            <img src="image/Online resume.gif" alt="">
+            <img src="../image/Online resume.gif" alt="">
         </div> 
         </section>
         
@@ -41,25 +41,25 @@
         <h1 class="heading">our <span>services</span></h1>
         <div class="box-container">
             <div class="box">
-                <img src="image/image1.jpeg" alt="">
+                <img src="../image/image1.jpeg" alt="">
                 <h3>web design</h3>
                 <p>Lorem corporis molestias ex vel perspiciatis voluptas, asperiores voluptatum placeat.</p>
                 <a href="template1.html" class="btn">learn more</a>
             </div>
             <div class="box">
-                <img src="image/image2.jpeg" alt="">
+                <img src="../image/image2.jpeg" alt="">
                 <h3>seo marketing</h3>
                 <p>Lorem corporis molestias ex vel perspiciatis voluptas, asperiores voluptatum placeat.</p>
                 <a href="#" class="btn">learn more</a>
             </div>
             <div class="box">
-                <img src="image/image3.jpeg" alt="">
+                <img src="../image/image3.jpeg" alt="">
                 <h3>web design</h3>
                 <p>Lorem corporis molestias ex vel perspiciatis voluptas, asperiores voluptatum placeat.</p>
                 <a href="#" class="btn">learn more</a>
             </div>
             <div class="box">
-                <img src="image/image1.jpeg" alt="">
+                <img src="../image/image1.jpeg" alt="">
                 <h3>web hosting</h3>
                 <p>Lorem corporis molestias ex vel perspiciatis voluptas, asperiores voluptatum placeat.</p>
                 <a href="#" class="btn">learn more</a>
@@ -104,7 +104,7 @@
         <div class="box-container">
             <div class="box">
                 <span>01</span>
-                <img src="image/image2.jpeg" alt="">
+                <img src="../image/image2.jpeg" alt="">
                 <div class="content">
                     <h3>web design</h3>
                     <p>1st may, 2021</p>
@@ -112,7 +112,7 @@
             </div>
             <div class="box">
                 <span>02</span>
-                <img src="image/image2.jpeg" alt="">
+                <img src="../image/image2.jpeg" alt="">
                 <div class="content">
                     <h3>web design</h3>
                     <p>1st may, 2021</p>
@@ -120,7 +120,7 @@
             </div>
             <div class="box">
                 <span>03</span>
-                <img src="image/image2.jpeg" alt="">
+                <img src="../image/image2.jpeg" alt="">
                 <div class="content">
                     <h3>web design</h3>
                     <p>1st may, 2021</p>
@@ -128,7 +128,7 @@
             </div>
             <div class="box">
                 <span>04</span>
-                <img src="image/image2.jpeg" alt="">
+                <img src="../image/image2.jpeg" alt="">
                 <div class="content">
                     <h3>web design</h3>
                     <p>1st may, 2021</p>
@@ -136,7 +136,7 @@
             </div>
             <div class="box">
                 <span>05</span>
-                <img src="image/image2.jpeg" alt="">
+                <img src="../image/image2.jpeg" alt="">
                 <div class="content">
                     <h3>web design</h3>
                     <p>1st may, 2021</p>
@@ -144,7 +144,7 @@
             </div>
             <div class="box">
                 <span>06</span>
-                <img src="image/image2.jpeg" alt="">
+                <img src="../image/image2.jpeg" alt="">
                 <div class="content">
                     <h3>web design</h3>
                     <p>1st may, 2021</p>
@@ -159,7 +159,7 @@
         <div class="box-container">
             <div class="box">
                 <div class="user">
-                    <img src="image/image1.jpeg" alt="">
+                    <img src="../image/image1.jpeg" alt="">
                     <div class="info">
                         <h3>john doe</h3>
                         <div class="stars">
@@ -181,7 +181,7 @@
             </div>
             <div class="box">
                 <div class="user">
-                    <img src="image/image2.jpeg" alt="">
+                    <img src="../image/image2.jpeg" alt="">
                     <div class="info">
                         <h3>john doe</h3>
                         <div class="stars">
@@ -203,7 +203,7 @@
             </div>
             <div class="box">
                 <div class="user">
-                    <img src="image/image3.jpeg" alt="">
+                    <img src="../image/image3.jpeg" alt="">
                     <div class="info">
                         <h3>john doe</h3>
                         <div class="stars">
@@ -249,7 +249,7 @@
              </div>
         </div> 
         <div class="row">
-            <div class="map"><img src="image/image3.jpeg" alt="" "></div>
+            <div class="map"><img src="../image/image3.jpeg" alt="" "></div>
            
             <form action="">
                 <input type="text" placeholder="name" class="box">
@@ -300,6 +300,6 @@
         <div class="credit">Created By <span>Priti Gupta</span> | All Right Reserved</div>
     </section>
     <!-- footer section end -->
-  <script src="script.js"></script>  
+  <script src="../js/script.js"></script>  
 </body>
 </html>
