--- a/index/index.html
+++ b/index/index.html
@@ -300,6 +300,6 @@
         <div class="credit">Created By <span>Priti Gupta</span> | All Right Reserved</div>
     </section>
     <!-- footer section end -->
-  <script src="../js/script.js"></script>  
+  <script src="../script/script.js"></script>  
 </body>
 </html>
