--- a/index/form.html
+++ b/index/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
      <!-- header section start -->
@@ -299,6 +299,6 @@
         </div>
     </section>
     <!--download resume end-->
-         <script src="script.js"></script>  
+         <script src="../script/script.js"></script>  
 </body>
 </html>
